--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="15.0.3" />
     <PackageReference Include="LiteDB" Version="5.0.4" />
+    <PackageReference Include="Markdig" Version="0.20.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="PCLCrypto" Version="2.0.147" />
     <PackageReference Include="Xamarin.Auth" Version="1.7.0" />
