--- a/src/iOS.Core/iOS.Core.csproj
+++ b/src/iOS.Core/iOS.Core.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Bit.iOS.Core</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>BitwardeniOSCore</AssemblyName>
+    <AssemblyName>VKViOSCore</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
