--- a/src/iOS/iOS.csproj
+++ b/src/iOS/iOS.csproj
@@ -11,11 +11,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Bit.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>VivoKeyVaultiOS</AssemblyName>
+    <AssemblyName>BitwardeniOS</AssemblyName>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <ProvisioningType>manual</ProvisioningType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
